# bevy2d_template

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs
